# guitar-newsician

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CLAUDE.md  DESIGN.md  PRODUCT.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  run_api.py  run_chat.py  tsconfig.json
.impeccable/: design.json
analyzers/: main.py  music_analysis.py
backend/: README.md  pyproject.toml  run_api.py  run_chat.py
backend/analyzers/: main.py
backend/api/: README.md  __init__.py
backend/api/models/: __init__.py  jobs.py
backend/api/routes/: config.py
backend/api/services/: analysis_service.py  convert_service.py  job_manager.py
backend/api/static/: index.html
backend/api/utils/: __init__.py
backend/app/analyzers/: config.yaml  main.py  music_analysis.py
backend/app/api/: FEATURES.md  QUICKSTART.md  chat_client.py  config.py  main.py  openai_tools.json  start_chat.sh  start_server.sh
backend/app/api/models/: __init__.py  jobs.py  requests.py  responses.py
backend/app/api/routes/: __init__.py  convert.py  download.py  jobs.py  library.py  lyrics.py  midi_editor.py
backend/app/api/services/: __init__.py  analysis_service.py  convert_service.py  download_service.py  stem_service.py
backend/app/converters/: audio2wav.py  config.yaml
backend/app/converters/wav2midi/: __init__.py  config.yaml  main.py  wav2midi_converter.py
backend/app/downloaders/: lyrics_fetcher.py
backend/app/downloaders/yt_music_downloader/: __init__.py  config.yaml  helpers.py  main.py  process_existing.py
backend/app/downloaders/yt_music_gytmdl/: __init__.py
backend/app/editors/midi_agent_editor/: README.md  __init__.py
backend/app/editors/midi_agent_editor/agents/: __init__.py  graph.py  schemas.py  state.py
backend/app/editors/midi_agent_editor/tools/: __init__.py  audio_tools.py  midi_editor.py  midi_tools.py
backend/app/lyrics/: config.yaml  main.py
backend/app/stem_separators/: stem_separator.py
backend/downloaders/yt_music_gytmdl/: config.yaml  main.py
backend/stem_separators/: __init__.py  config.yaml  main.py
docs/: ARCHITECTURE.md  README.md  STUDIO_IMPROVEMENTS.md  TRANSCRIPTION_UI_GUIDE.md  UI_DOCUMENTATION.md  WORKFLOWS.md  shared_supabase_auth_app_membership_playbook.md
execution docs/: 2026-06-06-pipeline-payload-progressive-disclosure.md  2026-06-10-landing-page-and-app-routing.md  2026-06-10-studio-transport-controls-redesign.md  2026-06-11-landing-how-it-works-and-copy-sharpening.md  2026-06-11-landing-immersive-rebuild.md  core-flow-rework.md  pipeline-controls-relocation.md  playback-engine-rewrite.md  rerun-stages.md  song-section-pill.md  topbar-command-search.md
(+279 files in other folders)
