[project]
name = "werecode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "basic-pitch>=0.3.0",
    "demucs>=4.0.1",
    "essentia>=2.1b6.dev1389",
    "fastapi>=0.119.1",
    "ffmpeg-python>=0.2.0",
    "gytmdl>=2.1.6",
    "mido>=1.3.3",
    "msaf>=0.1.80",
    "pydantic>=2.12.3",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "rich>=14.2.0",
    "setuptools>=65.0.0",
    "syncedlyrics>=1.0.0",
    "uvicorn>=0.38.0",
    "yt-dlp>=2025.10.14",
    "openai>=2.7.1",
    "coremltools>=8.3.0",
    "dotenv>=0.9.9",
    "langgraph>=1.0.4",
    "music21>=9.9.1",
    "librosa>=0.11.0",
    "soundfile>=0.13.1",
    "langchain-openai>=1.1.0",
]

[dependency-groups]
dev = []
